installr 0.20.1 (2018-07-07)
---------------------------

UPDATED FUNCTIONS:
   * updated install.python() to check 32/64 bit Windows
   

installr 0.20.0 (2018-05-02)
---------------------------

NEW FUNCTIONS:
   * install.nodejs - Downloads and installs the latest version of nodejs LTS or Current for Windows.
   * is.x64 - Checks if the running OS is x64
   * install.conda - Miniconda is minimal version of anaconda for python.

BUG FIXES:
   * Fix install.ImageMagick()
   * Fix install.MikTeX
   * Fix myip


installr 0.19.0 (2017-04-21)
---------------------------

NEW FUNCTIONS:
   * install.inno - "Inno Setup is a free installer for Windows programs. First introduced in 1997, Inno Setup today rivals and even surpasses many commercial installers in feature set and stability."


BUG FIXES:
   * Fix install.Rtools()


OTHER NOTES:
   * Moved stringr to depends. R now must be >2.14



installr 0.18.1 (2016-11-11)
---------------------------

BUG FIXES:
   * Fix install.MikTeX()


installr 0.18.0 (2016-11-05)
---------------------------

NEW FUNCTIONS:
   * install.python - Downloads and installs python 2 or 3

UPDATED FUNCTIONS:
   * install.URL now gives warning if there is suspicion that the user is not connected to the internet.
   * updateR  - added cran_mirror option 



installr 0.17.8 (2016-05-14)
---------------------------

BUG FIXES:
   * Fix "Error in setInternet2(TRUE) : use != NA is defunct" when using updateR()
   * Fix install.CMake() ( fix issue #48 )
   * In require2 change ask from TRUE to FALSE

installr 0.17.7 (2016-04-13)
---------------------------

* Moved stringr and curl to suggest (so to allow users of R version 2.11-3.00 to also use installr for updating their R)


installr 0.17.6 (2016-04-09)
---------------------------

BUG FIXES:
   * copy.packages.between.libraries - can now deal with a file name such as "R-3.2.4revised-win.exe". (by fixing R_version_in_a_folder which was used inside get.installed.R.folders)

