@@ -2,7 +2,12 @@
 % Please edit documentation in R/installOpenJdk.R
 \name{install.java}
 \alias{install.java}
-\title{Downloads and set path openjdk}
+\alias{install.Java}
+\alias{install.jdk}
+\alias{install.Jdk}
+\alias{install.openjdk}
+\alias{install.OpenJdk}
+\title{Install Java - downloads and set path openjdk}
 \usage{
 install.java(version = 10,
   page_with_download_url = "http://jdk.java.net/java-se-ri/",
@@ -32,5 +37,5 @@ install.java(10)
 }
 }
 \author{
-Tal Galili and A. Jonathan R. Godfrey
+Chan-Yub Park And Tal Galili
 }
